Arbre.output
Grammaire

    0 $accept: start $end

    1 start: balise

    2 balise: TXT '[' attr ']' '{' contenu '}'
    3       | TXT '{' contenu '}'

    4 attr: attr TXT '=' TXT
    5     | %empty

    6 contenu: '"' TXT '"' contenu
    7        | balise contenu
    8        | %empty


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'"' (34) 6
'=' (61) 4
'[' (91) 2
']' (93) 2
'{' (123) 2 3
'}' (125) 2 3
error (256)
TXT (258) 2 3 4 6


Non-terminaux, suivis des règles où ils apparaissent

$accept (10)
    à gauche: 0
start (11)
    à gauche: 1, à droite: 0
balise (12)
    à gauche: 2 3, à droite: 1 7
attr (13)
    à gauche: 4 5, à droite: 2 4
contenu (14)
    à gauche: 6 7 8, à droite: 2 3 6 7


État 0

    0 $accept: . start $end

    TXT  décalage et aller à l'état 1

    start   aller à l'état 2
    balise  aller à l'état 3


État 1

    2 balise: TXT . '[' attr ']' '{' contenu '}'
    3       | TXT . '{' contenu '}'

    '['  décalage et aller à l'état 4
    '{'  décalage et aller à l'état 5


État 2

    0 $accept: start . $end

    $end  décalage et aller à l'état 6


État 3

    1 start: balise .

    $défaut  réduction par utilisation de la règle 1 (start)


État 4

    2 balise: TXT '[' . attr ']' '{' contenu '}'

    $défaut  réduction par utilisation de la règle 5 (attr)

    attr  aller à l'état 7


État 5

    3 balise: TXT '{' . contenu '}'

    TXT  décalage et aller à l'état 1
    '"'  décalage et aller à l'état 8

    $défaut  réduction par utilisation de la règle 8 (contenu)

    balise   aller à l'état 9
    contenu  aller à l'état 10


État 6

    0 $accept: start $end .

    $défaut  accepter


État 7

    2 balise: TXT '[' attr . ']' '{' contenu '}'
    4 attr: attr . TXT '=' TXT

    TXT  décalage et aller à l'état 11
    ']'  décalage et aller à l'état 12


État 8

    6 contenu: '"' . TXT '"' contenu

    TXT  décalage et aller à l'état 13


État 9

    7 contenu: balise . contenu

    TXT  décalage et aller à l'état 1
    '"'  décalage et aller à l'état 8

    $défaut  réduction par utilisation de la règle 8 (contenu)

    balise   aller à l'état 9
    contenu  aller à l'état 14


État 10

    3 balise: TXT '{' contenu . '}'

    '}'  décalage et aller à l'état 15


État 11

    4 attr: attr TXT . '=' TXT

    '='  décalage et aller à l'état 16


État 12

    2 balise: TXT '[' attr ']' . '{' contenu '}'

    '{'  décalage et aller à l'état 17


État 13

    6 contenu: '"' TXT . '"' contenu

    '"'  décalage et aller à l'état 18


État 14

    7 contenu: balise contenu .

    $défaut  réduction par utilisation de la règle 7 (contenu)


État 15

    3 balise: TXT '{' contenu '}' .

    $défaut  réduction par utilisation de la règle 3 (balise)


État 16

    4 attr: attr TXT '=' . TXT

    TXT  décalage et aller à l'état 19


État 17

    2 balise: TXT '[' attr ']' '{' . contenu '}'

    TXT  décalage et aller à l'état 1
    '"'  décalage et aller à l'état 8

    $défaut  réduction par utilisation de la règle 8 (contenu)

    balise   aller à l'état 9
    contenu  aller à l'état 20


État 18

    6 contenu: '"' TXT '"' . contenu

    TXT  décalage et aller à l'état 1
    '"'  décalage et aller à l'état 8

    $défaut  réduction par utilisation de la règle 8 (contenu)

    balise   aller à l'état 9
    contenu  aller à l'état 21


État 19

    4 attr: attr TXT '=' TXT .

    $défaut  réduction par utilisation de la règle 4 (attr)


État 20

    2 balise: TXT '[' attr ']' '{' contenu . '}'

    '}'  décalage et aller à l'état 22


État 21

    6 contenu: '"' TXT '"' contenu .

    $défaut  réduction par utilisation de la règle 6 (contenu)


État 22

    2 balise: TXT '[' attr ']' '{' contenu '}' .

    $défaut  réduction par utilisation de la règle 2 (balise)
